Added more documentation, fixed doc generation in support of markdown